# jupyterfails

./: .gitignore  .prettierignore  CHANGELOG.md  Dockerfile.development  README.md  RELEASE.md  environment.yml  eslint.config.js  jupyter-lite.json  jupyter_lite_config.json  lerna.json  package.json  pyproject.toml  setup_development.sh  tsconfig.eslint.json  tsconfigbase.json
.github/workflows/: build.yml  check-release.yml  publish-release.yml  update-integration-tests.yml
examples/jupyterlite/: readme.md
src/: avtoolbarextension.ts  index.ts
src/__tests__/: fails_components_jupyter_applet_view.spec.ts
ui-tests/: package.json
ui-tests/tests/: fails_components_jupyter_applet_view.spec.ts
